--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -6,6 +6,7 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2rem;
+    color: white;
 }
 .wrapper {
     max-width: 1080px;
@@ -85,13 +86,13 @@ main {
 .pay-table-container {
     position: relative;
     display: flex;
-    justify-content: center;;
+    justify-content: space-between;
 }
 .pay-table-image {
     position: absolute;
     top: 110px;
     left: 60px;
-    opacity: 0.8;
+    // opacity: 0.9;
     width: 90%;
 }
 
@@ -114,14 +115,16 @@ main {
     justify-content: space-between;
     align-items: center;
     div {
-        margin: 25px;
-        width: 33.33%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    button {
-        width: 100%;
+        
+        width: 200px;
+        p {
+            width: 100%;
+            height: 200px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
     .btn-credits {
         border: 5px solid lightgray;
@@ -136,8 +139,11 @@ main {
 
 .welcome {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 50px 0;
+
 }
 // footer
 footer {
