--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,7 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2rem;
+  color: white;
 }
 
 .wrapper {
@@ -350,16 +351,15 @@ main .page-container .image-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .pay-table-image {
   position: absolute;
   top: 110px;
   left: 60px;
-  opacity: 0.8;
   width: 90%;
 }
 
@@ -397,21 +397,25 @@ main .page-container .image-container {
 }
 
 .score-container div {
-  margin: 25px;
-  width: 33.33%;
+  width: 200px;
+}
+
+.score-container div p {
+  width: 100%;
+  height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.score-container button {
-  width: 100%;
 }
 
 .score-container .btn-credits {
@@ -429,12 +433,17 @@ main .page-container .image-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 50px 0;
 }
 
 footer {
