--- a/styles/style.css
+++ b/styles/style.css
@@ -275,14 +275,15 @@ button {
   background: #232121;
   color: white;
   font-weight: 600;
-  -webkit-box-shadow: 0 9px #999;
-          box-shadow: 0 9px #999;
+  -webkit-box-shadow: 0 3px #1f1f1f;
+          box-shadow: 0 3px #1f1f1f;
+  margin: 50px 0;
 }
 
 button:active {
-  background-color: #3e8e41;
-  -webkit-box-shadow: 0 5px #666;
-          box-shadow: 0 5px #666;
+  background-color: #393a39;
+  -webkit-box-shadow: 0 5px #1f1f1f;
+          box-shadow: 0 5px #1f1f1f;
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
 }
@@ -294,11 +295,8 @@ button:active {
 }
 
 header {
-  height: 400px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.363)), to(rgba(131, 131, 131, 0.26))), url(../images/header.png);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.363), rgba(131, 131, 131, 0.26)), url(../images/header.png);
-  background-position: center;
-  background-size: cover;
+  height: 25vh;
+  background: #2F2C2C;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,16 +314,8 @@ header h1 {
 }
 
 main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  height: 70vh;
+  min-height: 1050px;
   background: #343131;
 }
 
@@ -336,11 +326,10 @@ main .page-container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 75px 0 50px;
 }
 
 main .page-container .image-container {
-  width: 30%;
+  width: 33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -358,19 +347,21 @@ main .page-container .image-container {
 
 .pay-table-image {
   position: absolute;
-  top: 110px;
-  left: 60px;
-  width: 90%;
+  top: 200px;
+  left: 0;
+  width: 100%;
 }
 
 .buttons-container {
-  padding: 50px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .buttons-container button {
@@ -398,6 +389,7 @@ main .page-container .image-container {
 
 .score-container div {
   width: 200px;
+  height: 200px;
 }
 
 .score-container div p {
@@ -443,12 +435,19 @@ main .page-container .image-container {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 50px 0;
+}
+
+.welcome img {
+  margin: 150px 0;
+}
+
+.welcome .btn-addCredits {
+  width: 100%;
 }
 
 footer {
   width: 100%;
-  height: 75px;
+  height: 5vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.876)), to(rgba(19, 18, 18, 0.863)));
   background: linear-gradient(rgba(0, 0, 0, 0.876), rgba(19, 18, 18, 0.863));
   color: white;
