--- a/styles/style.css
+++ b/styles/style.css
@@ -319,6 +319,23 @@ main {
   background: #343131;
 }
 
+main .pay-table-container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .pay-table-container .pay-table-image {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  width: 100%;
+}
+
 main .page-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -335,24 +352,7 @@ main .page-container .image-container {
   display: flex;
 }
 
-.pay-table-container {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.pay-table-image {
-  position: absolute;
-  top: 200px;
-  left: 0;
-  width: 100%;
-}
-
-.buttons-container {
+main .buttons-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -364,17 +364,41 @@ main .page-container .image-container {
           align-items: center;
 }
 
-.buttons-container button {
+main .buttons-container button {
   width: 100%;
 }
 
-.buttons-container .btn-stop,
-.buttons-container .btn-play {
+main .buttons-container .btn-stop,
+main .buttons-container .btn-play {
   border: 5px solid red;
   border-radius: 10px;
 }
 
-.score-container {
+main .welcome {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main .welcome img {
+  margin: 150px 0;
+}
+
+main .welcome .btn-addCredits {
+  width: 100%;
+}
+
+main .score-container {
   padding: 25px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -387,12 +411,12 @@ main .page-container .image-container {
           align-items: center;
 }
 
-.score-container div {
+main .score-container div {
   width: 200px;
   height: 200px;
 }
 
-.score-container div p {
+main .score-container div p {
   width: 100%;
   height: 200px;
   display: -webkit-box;
@@ -410,39 +434,15 @@ main .page-container .image-container {
           align-items: center;
 }
 
-.score-container .btn-credits {
+main .score-container .btn-credits {
   border: 5px solid lightgray;
   border-radius: 10px;
 }
 
-.score-container .btn-round,
-.score-container .btn-paid {
+main .score-container .btn-round,
+main .score-container .btn-paid {
   border: 5px solid #02bd60;
   border-radius: 10px;
-}
-
-.welcome {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.welcome img {
-  margin: 150px 0;
-}
-
-.welcome .btn-addCredits {
-  width: 100%;
 }
 
 footer {
