--- a/styles/style.css
+++ b/styles/style.css
@@ -242,7 +242,7 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 2rem;
-  color: white;
+  color: #f7f7f7;
 }
 
 .wrapper {
@@ -268,36 +268,31 @@ button {
 }
 
 button {
-  border: 0;
+  border: 5px solid #ff0a47;
   font-family: Arial, Helvetica, sans-serif;
   width: 180px;
   height: 100px;
-  background: #232121;
-  color: white;
+  background: #2b2a27;
+  color: #f7f7f7;
   font-weight: 600;
-  -webkit-box-shadow: 0 3px #1f1f1f;
-          box-shadow: 0 3px #1f1f1f;
+  -webkit-box-shadow: 0 3px #68685f;
+          box-shadow: 0 3px #68685f;
   margin: 50px 0;
 }
 
 button:active {
-  background-color: #393a39;
-  -webkit-box-shadow: 0 5px #1f1f1f;
-          box-shadow: 0 5px #1f1f1f;
+  border: 5px solid #fc208e;
+  background-color: #68685f;
+  -webkit-box-shadow: 0 5px #2b2a27;
+          box-shadow: 0 5px #2b2a27;
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
 }
 
-.digital {
-  font-family: "Orbitron";
-  font-size: 3rem;
-  color: #eee195;
-}
-
 header {
   height: 25vh;
-  background: #2f2c2c;
-  color: white;
+  background: #2b2a27;
+  color: #f7f7f7;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -311,12 +306,15 @@ header {
 
 header h1 {
   text-align: center;
+  font-family: "Orbitron";
+  font-size: 5rem;
+  letter-spacing: 0.5px;
 }
 
 main {
   height: 70vh;
   min-height: 1050px;
-  background: #343131;
+  background: #68685f;
 }
 
 main .pay-table-container {
@@ -370,8 +368,10 @@ main .buttons-container button {
 
 main .buttons-container .btn-stop,
 main .buttons-container .btn-play {
-  border: 5px solid red;
+  border: 5px solid #ff0a47;
   border-radius: 10px;
+  font-family: "Orbitron";
+  letter-spacing: 5px;
 }
 
 main .welcome {
@@ -412,13 +412,14 @@ main .score-container {
 }
 
 main .score-container div {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 125px;
 }
 
 main .score-container div p {
   width: 100%;
-  height: 200px;
+  height: 125px;
+  line-height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -434,22 +435,30 @@ main .score-container div p {
           align-items: center;
 }
 
-main .score-container .btn-credits {
-  border: 5px solid lightgray;
-  border-radius: 10px;
-}
-
+main .score-container .btn-credits,
 main .score-container .btn-round,
 main .score-container .btn-paid {
-  border: 5px solid #02bd60;
+  background-color: #dadad4;
+  color: #2b2a27;
+  border: 5px solid #2b2a27;
   border-radius: 10px;
+  font-weight: bold;
+}
+
+main .score-container .btn-credits .digital,
+main .score-container .btn-round .digital,
+main .score-container .btn-paid .digital {
+  font-family: "Orbitron";
+  font-weight: bolder;
+  font-size: 4rem;
+  color: #ff0a47;
+  text-shadow: -1px 0 #f7f7f7, 0 1px #f7f7f7, 1px 0 #f7f7f7, 0 -1px #f7f7f7;
 }
 
 footer {
   width: 100%;
   height: 5vh;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.876)), to(rgba(19, 18, 18, 0.863)));
-  background: linear-gradient(rgba(0, 0, 0, 0.876), rgba(19, 18, 18, 0.863));
+  background: #2b2a27;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
