--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -56,7 +56,7 @@ button {
   color: $white;
   font-weight: 600;
   box-shadow: 0 3px $grey;
-  margin: 50px 0;
+  margin: 30px 0;
 
   &:active {
     border: 5px solid $pink;
@@ -67,24 +67,33 @@ button {
 }
 
 header {
-  height: 25vh;
+  height: 20vh;
+  min-height: 170px;
   background: $black;
   color: $white;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  h1 {
-    text-align: center;
-    font-family: "Orbitron";
-    font-size: 5rem;
-    letter-spacing: 0.5px;
-  }
+    div {
+      display: flex;
+      justify-content: center;
+      h1 {
+        text-align: center;
+        font-family: "Orbitron";
+        font-size: 3rem;
+        padding-top: 50px;
+        width: 380px;
+        span {
+          color: $red;
+          font-size: 5rem;
+        }
+      }
+    }
 }
 
 main {
-  height: 70vh;
-  min-height: 1050px;
+  height: calc(700px + 20vw);
+  // min-height: 610px;
   background: $grey;
 
   .pay-table-container {
@@ -135,7 +144,7 @@ main {
     justify-content: center;
 
     img {
-      margin: 150px 0;
+      margin: 60px 0;
     }
 
     .btn-addCredits {
