--- a/styles/style.css
+++ b/styles/style.css
@@ -277,7 +277,7 @@ button {
   font-weight: 600;
   -webkit-box-shadow: 0 3px #68685f;
           box-shadow: 0 3px #68685f;
-  margin: 50px 0;
+  margin: 30px 0;
 }
 
 button:active {
@@ -290,7 +290,8 @@ button:active {
 }
 
 header {
-  height: 25vh;
+  height: 20vh;
+  min-height: 170px;
   background: #2b2a27;
   color: #f7f7f7;
   display: -webkit-box;
@@ -304,16 +305,30 @@ header {
           align-items: center;
 }
 
-header h1 {
+header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header div h1 {
   text-align: center;
   font-family: "Orbitron";
+  font-size: 3rem;
+  padding-top: 50px;
+  width: 380px;
+}
+
+header div h1 span {
+  color: #ff0a47;
   font-size: 5rem;
-  letter-spacing: 0.5px;
 }
 
 main {
-  height: 70vh;
-  min-height: 1050px;
+  height: calc(700px + 20vw);
   background: #68685f;
 }
 
@@ -391,7 +406,7 @@ main .welcome {
 }
 
 main .welcome img {
-  margin: 150px 0;
+  margin: 60px 0;
 }
 
 main .welcome .btn-addCredits {
