--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -92,20 +92,27 @@ header {
 }
 
 main {
-  height: calc(700px + 20vw);
+  // height: 80vh;
   // min-height: 610px;
   background: $grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
 
   .pay-table-container {
-    position: relative;
+    // position: relative;
     display: flex;
+    flex-wrap: wrap;;
     justify-content: space-between;
+    // overflow: initial;
 
     .pay-table-image {
-      position: absolute;
-      top: 200px;
-      left: 0;
+      // position: absolute;
+      // top: 200px;
+      // left: 0;
       width: 100%;
+      margin-bottom: 50px;
     }
   }
 
@@ -197,6 +204,7 @@ main {
 footer {
   width: 100%;
   height: 5vh;
+  min-height: 100px;
   background: $black;
   color: white;
   display: flex;
