--- a/styles/style.css
+++ b/styles/style.css
@@ -328,25 +328,33 @@ header div h1 span {
 }
 
 main {
-  height: calc(700px + 20vw);
   background: #68685f;
-}
-
-main .pay-table-container {
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+main .pay-table-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
 main .pay-table-container .pay-table-image {
-  position: absolute;
-  top: 200px;
-  left: 0;
   width: 100%;
+  margin-bottom: 50px;
 }
 
 main .page-container {
@@ -473,6 +481,7 @@ main .score-container .btn-paid .digital {
 footer {
   width: 100%;
   height: 5vh;
+  min-height: 100px;
   background: #2b2a27;
   color: white;
   display: -webkit-box;
