--- a/styles/style.css
+++ b/styles/style.css
@@ -498,6 +498,22 @@ footer {
           align-items: center;
 }
 
+.game-over-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 @media (max-width: 600px) {
   body {
     font-size: 1.5rem;
