--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,15 +1,9 @@
 // palette
 
-// "Jet":"2b2a27",
-// "Dim Gray":"68685f",
-// "Red Crayola":"ff0a47",
-// "Laser Lemon":"fdff70",
-// "Cultured":"f7f7f7"
-
 $black: #2b2a27;
 $grey: #68685f;
 $red: #ff0a47;
-$pink: #fc208e;
+$pink: #dc326d;
 $white: #f7f7f7;
 
 @import "setup";
@@ -49,8 +43,11 @@ button {
 button {
   border: 5px solid $red;
   font-family: Arial, Helvetica, sans-serif;
-  width: 180px;
-  height: 100px;
+  width: 25%;
+  height: 14vw;
+  min-height: 50px;
+  max-height: 90px;
+  min-width: 90px;
   background: $black;
   color: $white;
   font-weight: 600;
@@ -83,7 +80,7 @@ header {
       text-align: center;
       font-family: "Orbitron";
       font-size: 3rem;
-      padding: 10px 0;
+      padding: 25px 0;
       width: 380px;
       text-shadow: 2px 0 0 $black, -2px 0 0 $black, 0 2px 0 $black,
         0 -2px 0 $black, 1px 1px 0 $black, -1px -1px 0 $black, 1px -1px 0 $black,
@@ -105,16 +102,11 @@ main {
   justify-content: space-evenly;
 
   .pay-table-container {
-    // position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    // overflow: initial;
 
     .pay-table-image {
-      // position: absolute;
-      // top: 200px;
-      // left: 0;
       width: 100%;
       margin-bottom: 50px;
     }
@@ -136,13 +128,14 @@ main {
     align-items: center;
 
     button {
-      width: 100%;
+      width: 75%;
     }
 
     .btn-stop,
     .btn-play {
       border: 5px solid $red;
-      border-radius: 10px;
+      height: 100px;
+      border-radius: 50px;
       font-family: "Orbitron";
       letter-spacing: 5px;
     }
@@ -158,8 +151,32 @@ main {
       margin: 60px 0;
     }
 
-    .btn-addCredits {
+    .game-over-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-evenly;
       width: 100%;
+
+      p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 5px solid $black;
+        width: 180px;
+        height: 14vw;
+        min-height: 50px;
+        max-height: 90px;
+        background: $red;
+        color: $white;
+        font-weight: 600;
+        margin: 30px 0;
+        width: 40%;
+      }
+
+      .btn-addCredits {
+        width: 40%;
+      }
     }
   }
 
@@ -207,7 +224,7 @@ main {
 footer {
   width: 100%;
   height: 5vh;
-  min-height: 100px;
+  min-height: 70px;
   background: $black;
   color: white;
   display: flex;
@@ -215,27 +232,19 @@ footer {
   align-items: center;
 }
 
-.game-over-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-@media (max-width: 730px) {
-  main {
-    // height: ;
-  }
-}
-
 @media (max-width: 600px) {
   body {
     font-size: 1.5rem;
   }
 
-  main {
-    .score-container {
+  .wrapper {
+    width: 95%;
+  }
 
+  main {
+    min-height: 700px;
+
+    .score-container {
       .btn-credits,
       .btn-round,
       .btn-paid {
@@ -252,6 +261,10 @@ footer {
     font-size: 1rem;
   }
 
+  .wrapper {
+    width: 98%;
+  }
+
   header {
     div {
       h1 {
@@ -265,8 +278,9 @@ footer {
   }
 
   main {
-    .score-container {
+    min-height: 600px;
 
+    .score-container {
       .btn-credits,
       .btn-round,
       .btn-paid {
