--- a/styles/style.css
+++ b/styles/style.css
@@ -270,8 +270,11 @@ button {
 button {
   border: 5px solid #ff0a47;
   font-family: Arial, Helvetica, sans-serif;
-  width: 180px;
-  height: 100px;
+  width: 25%;
+  height: 14vw;
+  min-height: 50px;
+  max-height: 90px;
+  min-width: 90px;
   background: #2b2a27;
   color: #f7f7f7;
   font-weight: 600;
@@ -281,7 +284,7 @@ button {
 }
 
 button:active {
-  border: 5px solid #fc208e;
+  border: 5px solid #dc326d;
   background-color: #68685f;
   -webkit-box-shadow: 0 5px #2b2a27;
           box-shadow: 0 5px #2b2a27;
@@ -319,7 +322,7 @@ header div h1 {
   text-align: center;
   font-family: "Orbitron";
   font-size: 3rem;
-  padding: 10px 0;
+  padding: 25px 0;
   width: 380px;
   text-shadow: 2px 0 0 #2b2a27, -2px 0 0 #2b2a27, 0 2px 0 #2b2a27, 0 -2px 0 #2b2a27, 1px 1px 0 #2b2a27, -1px -1px 0 #2b2a27, 1px -1px 0 #2b2a27, -1px 1px 0 #2b2a27, 1px 1px 5px #2b2a27;
 }
@@ -389,13 +392,14 @@ main .buttons-container {
 }
 
 main .buttons-container button {
-  width: 100%;
+  width: 75%;
 }
 
 main .buttons-container .btn-stop,
 main .buttons-container .btn-play {
   border: 5px solid #ff0a47;
-  border-radius: 10px;
+  height: 100px;
+  border-radius: 50px;
   font-family: "Orbitron";
   letter-spacing: 5px;
 }
@@ -420,8 +424,47 @@ main .welcome img {
   margin: 60px 0;
 }
 
-main .welcome .btn-addCredits {
+main .welcome .game-over-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
+}
+
+main .welcome .game-over-container p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 5px solid #2b2a27;
+  width: 180px;
+  height: 14vw;
+  min-height: 50px;
+  max-height: 90px;
+  background: #ff0a47;
+  color: #f7f7f7;
+  font-weight: 600;
+  margin: 30px 0;
+  width: 40%;
+}
+
+main .welcome .game-over-container .btn-addCredits {
+  width: 40%;
 }
 
 main .score-container {
@@ -484,7 +527,7 @@ main .score-container .btn-paid .digital {
 footer {
   width: 100%;
   height: 5vh;
-  min-height: 100px;
+  min-height: 70px;
   background: #2b2a27;
   color: white;
   display: -webkit-box;
@@ -498,25 +541,15 @@ footer {
           align-items: center;
 }
 
-.game-over-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
 @media (max-width: 600px) {
   body {
     font-size: 1.5rem;
+  }
+  .wrapper {
+    width: 95%;
+  }
+  main {
+    min-height: 700px;
   }
   main .score-container .btn-credits .digital,
   main .score-container .btn-round .digital,
@@ -529,11 +562,17 @@ footer {
   body {
     font-size: 1rem;
   }
+  .wrapper {
+    width: 98%;
+  }
   header div h1 {
     font-size: 2.5rem;
   }
   header div h1 span {
     font-size: 4rem;
+  }
+  main {
+    min-height: 600px;
   }
   main .score-container .btn-credits .digital,
   main .score-container .btn-round .digital,
