--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -64,12 +64,13 @@ button {
   &.volume-on,
   &.volume-off {
     border-radius: 75px;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     width: 90px;
   }
 
   &.volume-off {
-    background-color: $grey;
+    background-color: #8d8d8b;
+    color: $black;
   }
 }
 
