--- a/styles/style.css
+++ b/styles/style.css
@@ -294,12 +294,13 @@ button:active {
 
 button.volume-on, button.volume-off {
   border-radius: 75px;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   width: 90px;
 }
 
 button.volume-off {
-  background-color: #68685f;
+  background-color: #8d8d8b;
+  color: #2b2a27;
 }
 
 header {
