--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -53,12 +53,19 @@ button {
   font-weight: 600;
   box-shadow: 0 3px $grey;
   margin: 30px 0;
+  border-radius: 10px;
 
   &:active {
     border: 2px solid $pink;
     background-color: $grey;
     box-shadow: 0 5px $black;
     transform: translateY(4px);
+  }
+
+  &:hover,
+  &:focus {
+    border: 4px solid $pink;
+    background-color:  #31312f;
   }
 
   &.volume-on,
@@ -71,6 +78,19 @@ button {
   &.volume-off {
     background-color: #8d8d8b;
     color: $black;
+  }
+
+  &.btn-stop,
+  &.btn-play {
+    // border: 2px solid $red;
+    height: 100px;
+    border-radius: 50px;
+    font-family: "Orbitron";
+    letter-spacing: 5px;
+    width: 75%;
+  }
+  &.btn-addCredits {
+    width: 40%;
   }
 }
 
@@ -97,6 +117,7 @@ header {
       font-size: 3rem;
       padding: 20px 0;
       width: 500px;
+
       span {
         color: $red;
         font-size: 5rem;
@@ -120,6 +141,7 @@ main {
     .pay-table-image {
       width: 100%;
       margin-bottom: 50px;
+      border: 2px solid $red;
     }
   }
 
@@ -131,8 +153,9 @@ main {
       width: 33%;
       display: flex;
     }
+
     img {
-      border:2px solid $black;
+      border: 2px solid $black;
     }
   }
 
@@ -140,19 +163,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    button {
-      width: 75%;
-    }
-
-    .btn-stop,
-    .btn-play {
-      border: 2px solid $red;
-      height: 100px;
-      border-radius: 50px;
-      font-family: "Orbitron";
-      letter-spacing: 5px;
-    }
   }
 
   .welcome {
@@ -185,10 +195,6 @@ main {
         color: $white;
         font-weight: 600;
         margin: 30px 0;
-        width: 40%;
-      }
-
-      .btn-addCredits {
         width: 40%;
       }
     }
@@ -245,6 +251,7 @@ footer {
   justify-content: center;
   align-items: center;
   border-top: 2px solid $red;
+  font-size: 1.5rem;
 }
 
 @media (max-width: 600px) {
