--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -65,7 +65,7 @@ button {
   &:hover,
   &:focus {
     border: 4px solid $pink;
-    background-color:  #31312f;
+    background-color: #31312f;
   }
 
   &.volume-on,
@@ -89,6 +89,7 @@ button {
     letter-spacing: 5px;
     width: 75%;
   }
+
   &.btn-addCredits {
     width: 40%;
   }
@@ -221,9 +222,9 @@ main {
       }
     }
 
-    .btn-credits,
-    .btn-round,
-    .btn-paid {
+    .score-credits,
+    .score-round,
+    .score-paid {
       background-color: #dadad4;
       color: $black;
       border: 2px solid $black;
@@ -254,7 +255,7 @@ footer {
   font-size: 1.5rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 780px) {
   body {
     font-size: 1.5rem;
   }
@@ -263,14 +264,22 @@ footer {
     width: 95%;
   }
 
+  button {
+
+    &.volume-on,
+    &.volume-off {
+      font-size: 2rem;
+    }
+  }
+
   main {
-    min-height: 700px;
+    min-height: 750px;
 
     .score-container {
 
-      .btn-credits,
-      .btn-round,
-      .btn-paid {
+      .score-credits,
+      .score-round,
+      .score-paid {
         .digital {
           font-size: 3rem;
         }
@@ -286,6 +295,14 @@ footer {
 
   .wrapper {
     width: 98%;
+  }
+
+  button {
+
+    &.volume-on,
+    &.volume-off {
+      font-size: 1.5rem;
+    }
   }
 
   header {
@@ -304,12 +321,32 @@ footer {
     min-height: 600px;
 
     .score-container {
-
-      .btn-credits,
-      .btn-round,
-      .btn-paid {
+      div {
+        height: 80px;
+        p {
+          height: 80px;
+          line-height: 25px;
+        }
+      }
+      .score-credits,
+      .score-round,
+      .score-paid {
         .digital {
           font-size: 2rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 380px) {
+  header {
+    div {
+      h1 {
+        font-size: 2rem;
+
+        span {
+          font-size: 3.5rem;
         }
       }
     }
