--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,6 +8,8 @@ $white: #f7f7f7;
 
 @import "setup";
 
+
+
 html {
   font-size: 62.5%;
 }
@@ -255,100 +257,5 @@ footer {
   font-size: 1.5rem;
 }
 
-@media (max-width: 780px) {
-  body {
-    font-size: 1.5rem;
-  }
-
-  .wrapper {
-    width: 95%;
-  }
-
-  button {
-
-    &.volume-on,
-    &.volume-off {
-      font-size: 2rem;
-    }
-  }
-
-  main {
-    min-height: 750px;
-
-    .score-container {
-
-      .score-credits,
-      .score-round,
-      .score-paid {
-        .digital {
-          font-size: 3rem;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  body {
-    font-size: 1rem;
-  }
-
-  .wrapper {
-    width: 98%;
-  }
-
-  button {
-
-    &.volume-on,
-    &.volume-off {
-      font-size: 1.5rem;
-    }
-  }
-
-  header {
-    div {
-      h1 {
-        font-size: 2.5rem;
-
-        span {
-          font-size: 4rem;
-        }
-      }
-    }
-  }
-
-  main {
-    min-height: 600px;
-
-    .score-container {
-      div {
-        height: 80px;
-        p {
-          height: 80px;
-          line-height: 25px;
-        }
-      }
-      .score-credits,
-      .score-round,
-      .score-paid {
-        .digital {
-          font-size: 2rem;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 380px) {
-  header {
-    div {
-      h1 {
-        font-size: 2rem;
-
-        span {
-          font-size: 3.5rem;
-        }
-      }
-    }
-  }
-}
+@import "tablets";
+@import "mobiles";
