--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -7,255 +7,6 @@ $pink: #dc326d;
 $white: #f7f7f7;
 
 @import "setup";
-
-
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 2rem;
-  color: $white;
-}
-
-.wrapper {
-  max-width: 1080px;
-  margin: 0 auto;
-  width: 90%;
-}
-
-img {
-  width: 100%;
-}
-
-ul,
-li,
-a,
-p,
-h1,
-h2,
-h3,
-button {
-  margin: 0;
-  padding: 0;
-}
-
-button {
-  border: 2px solid $red;
-  font-family: Arial, Helvetica, sans-serif;
-  width: 25%;
-  height: 14vw;
-  min-height: 50px;
-  max-height: 90px;
-  min-width: 90px;
-  background: $black;
-  color: $white;
-  font-weight: 600;
-  box-shadow: 0 3px $grey;
-  margin: 30px 0;
-  border-radius: 10px;
-
-  &:active {
-    border: 2px solid $pink;
-    background-color: $grey;
-    box-shadow: 0 5px $black;
-    transform: translateY(4px);
-  }
-
-  &:hover,
-  &:focus {
-    border: 4px solid $pink;
-    background-color: #31312f;
-  }
-
-  &.volume-on,
-  &.volume-off {
-    border-radius: 75px;
-    font-size: 2.5rem;
-    width: 90px;
-  }
-
-  &.volume-off {
-    background-color: #8d8d8b;
-    color: $black;
-  }
-
-  &.btn-stop,
-  &.btn-play {
-    // border: 2px solid $red;
-    height: 100px;
-    border-radius: 50px;
-    font-family: "Orbitron";
-    letter-spacing: 5px;
-    width: 75%;
-  }
-
-  &.btn-addCredits {
-    width: 40%;
-  }
-}
-
-header {
-  height: 20vh;
-  min-height: 170px;
-  background: $black;
-  color: $white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 2px solid $red;
-
-  div {
-    display: flex;
-    justify-content: center;
-    // background-color: $black;
-
-    h1 {
-      text-align: center;
-      font-family: "Orbitron";
-      letter-spacing: 4px;
-      line-height: 65px;
-      font-size: 3rem;
-      padding: 20px 0;
-      width: 500px;
-
-      span {
-        color: $red;
-        font-size: 5rem;
-      }
-    }
-  }
-}
-
-main {
-  min-height: 800px;
-  background: $grey;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
-  .pay-table-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    .pay-table-image {
-      width: 100%;
-      margin-bottom: 50px;
-      border: 2px solid $red;
-    }
-  }
-
-  .page-container {
-    display: flex;
-    justify-content: space-between;
-
-    .image-container {
-      width: 33%;
-      display: flex;
-    }
-
-    img {
-      border: 2px solid $black;
-    }
-  }
-
-  .buttons-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .welcome {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    img {
-      margin: 60px 0;
-    }
-
-    .game-over-container {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
-      width: 100%;
-
-      p {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px solid $black;
-        width: 180px;
-        height: 14vw;
-        min-height: 50px;
-        max-height: 90px;
-        background: $red;
-        color: $white;
-        font-weight: 600;
-        margin: 30px 0;
-        width: 40%;
-      }
-    }
-  }
-
-  .score-container {
-    padding: 25px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    div {
-      width: 32%;
-      height: 125px;
-
-      p {
-        width: 100%;
-        height: 125px;
-        line-height: 50px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-    }
-
-    .score-credits,
-    .score-round,
-    .score-paid {
-      background-color: #dadad4;
-      color: $black;
-      border: 2px solid $black;
-      border-radius: 10px;
-      font-weight: bold;
-
-      .digital {
-        font-family: "Orbitron";
-        font-weight: bolder;
-        font-size: 4rem;
-        color: $red;
-        text-shadow: -1px 0 $white, 0 1px $white, 1px 0 $white, 0 -1px $white;
-      }
-    }
-  }
-}
-
-footer {
-  width: 100%;
-  height: 5vh;
-  min-height: 70px;
-  background: $black;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 2px solid $red;
-  font-size: 1.5rem;
-}
-
+@import "desktop";
 @import "tablets";
 @import "mobiles";
