--- a/styles/style.css
+++ b/styles/style.css
@@ -267,6 +267,11 @@ button {
   padding: 0;
 }
 
+a {
+  -webkit-text-emphasis: none;
+          text-emphasis: none;
+}
+
 button {
   border: 2px solid #ff0a47;
   font-family: Arial, Helvetica, sans-serif;
@@ -551,6 +556,10 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -559,6 +568,10 @@ footer {
           align-items: center;
   border-top: 2px solid #ff0a47;
   font-size: 1.5rem;
+}
+
+footer a {
+  color: #ff1100;
 }
 
 @media (max-width: 780px) {
