--- a/styles/style.css
+++ b/styles/style.css
@@ -574,6 +574,10 @@ footer a {
   color: #ff1100;
 }
 
+footer p {
+  line-height: 25px;
+}
+
 @media (max-width: 780px) {
   body {
     font-size: 1.5rem;
