reels container ajustt

--- a/styles/style.css
+++ b/styles/style.css
@@ -268,8 +268,7 @@ button {
 }
 
 a {
-  -webkit-text-emphasis: none;
-          text-emphasis: none;
+  text-decoration: none;
 }
 
 button {
@@ -399,7 +398,7 @@ main .pay-table-container .pay-table-image {
   border: 2px solid #ff0a47;
 }
 
-main .page-container {
+main .reels-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -408,14 +407,14 @@ main .page-container {
           justify-content: space-between;
 }
 
-main .page-container .image-container {
+main .reels-container .image-container {
   width: 33%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-main .page-container img {
+main .reels-container img {
   border: 2px solid #2b2a27;
 }
 
