--- a/styles/sass/_desktop.scss
+++ b/styles/sass/_desktop.scss
@@ -31,7 +31,7 @@ button {
 }
 
 a {
-  text-emphasis: none;
+  text-decoration: none;
 }
 
 button {
@@ -140,7 +140,7 @@ main {
     }
   }
 
-  .page-container {
+  .reels-container {
     display: flex;
     justify-content: space-between;
 
